# SCKDE

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  main.py  pyproject.toml  run_test.py  sckde.py
docs/source/: api.rst  conf.py  index.rst  installation.rst
sckde/: __init__.py  sckde.py  utils.py
sckde.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sckde/exceptions/: exceptions.py
sckde/plotting/: plotting.py
sckde/sckde.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  sckde.py
src/sckde.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/integration_tests/: test_nebulosa.py
tests/integration_tests/nebulosa_tests/test1_base/: get_dens_z.csv  grid.csv  h.csv  input.csv  z.csv
tests/integration_tests/nebulosa_tests/test2_continuous_weights/: get_dens_z.csv  grid.csv  h.csv  input.csv  z.csv
tests/integration_tests/nebulosa_tests/test3_uniform_weights/: get_dens_z.csv  input.csv  z.csv
tests/integration_tests/nebulosa_tests/test4_large_n/: get_dens_z.csv  grid.csv  h.csv  input.csv  z.csv
tests/integration_tests/nebulosa_tests/test5_bimodal/: get_dens_z.csv  grid.csv  h.csv  input.csv  z.csv
tests/unit_tests/: test_get_density.py  test_wkde_fft.py
