[project]
name = "sckde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kdepy>=1.1.12",
    "numpy>=2.3.5",
    "pytest>=9.0.2",
    "scanpy>=1.11.5",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]


[dependency-groups]
dev = [
    "black>=26.1.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.setuptools.packages.find]
where=["."]
